# enso

./: .bazelrc  .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  CHANGELOG.md  Cargo.toml  LICENSE  MODULE.bazel  build-config.yaml  build.sbt  eslint.config.mjs  flake.nix  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vitest.workspace.ts
app/gui/: .env  .env.bazel  .env.testing  .gitignore  BUILD.bazel  chromatic.config.json  env.d.ts  index.html  package.json  playwright.config.ts  shortcuts.md  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.vitest.json  tsconfig.node.json  tsconfig.storybook.json  vite.config.ts  vite.test.config.ts  vitest.config.ts
app/gui/.storybook/: env.d.ts  main.ts  preview.tsx
app/gui/docs/: browser_specific_behavior.md
app/gui/e2e/dashboard/: api.ts  auth.setup.ts  labels.spec.ts  loginLogout.spec.ts  loginScreen.spec.ts  setup.spec.ts  signUp.spec.ts
app/gui/e2e/dashboard/actions/: index.ts
app/gui/e2e/project-view/: locate.ts  nodeClipboard.spec.ts  nodeComments.spec.ts  rightPanel.spec.ts  setup.ts  tableVisualisation.spec.ts  undoRedo.spec.ts  widgets.spec.ts
app/gui/integration-test/dashboard/: README.md  api.ts  assetPanel.spec.ts  assetSearchBar.spec.ts  assetsTableFeatures.spec.ts  auth.setup.ts  authPreserveEmail.spec.ts  contextMenus.spec.ts  copy.spec.ts  createAsset.spec.ts  dataLinkEditor.spec.ts  delete.spec.ts  driveView.spec.ts  editAssetName.spec.ts  labels.spec.ts  labelsPanel.spec.ts  loginLogout.spec.ts  loginScreen.spec.ts  organizationSettings.spec.ts  pageSwitcher.spec.ts  setup.spec.ts  signUp.spec.ts  sort.spec.ts  startModal.spec.ts  userSettings.spec.ts
app/gui/integration-test/dashboard/actions/: BaseActions.ts  BaseSettingsTabActions.ts  DrivePageActions.ts  EditorPageActions.ts  ForgotPasswordPageActions.ts  LoginPageActions.ts  NewDataLinkModalActions.ts  PageActions.ts  RegisterPageActions.ts  SettingsAccountFormActions.ts  SettingsAccountTabActions.ts  SettingsActivityLogTabActions.ts  SettingsBillingAndPlansTabActions.ts  SettingsChangePasswordFormActions.ts  SettingsFormActions.ts  SettingsKeyboardShortcutsTabActions.ts  SettingsLocalTabActions.ts  SettingsMembersTabActions.ts  SettingsOrganizationFormActions.ts  SettingsOrganizationTabActions.ts  SettingsPageActions.ts  SettingsUserGroupsTabActions.ts  SetupDonePageActions.ts  SetupInvitePageActions.ts  SetupOrganizationPageActions.ts  SetupPlanPageActions.ts  SetupTeamPageActions.ts  SetupUsernamePageActions.ts  StartModalActions.ts  api.ts  contextMenuActions.ts  goToPageActions.ts  gotoSettingsTabActions.ts  index.ts  openUserMenuAction.ts  userMenuActions.ts
app/gui/integration-test/dashboard/mock/: enso-demo.main
app/gui/integration-test/project-view/: actions.ts  collapsingAndEntering.spec.ts  componentBrowser.spec.ts  customExpect.ts  edgeInteractions.spec.ts  expressionUpdates.ts  graphNodeVisualization.spec.ts  locate.ts  nodeClipboard.spec.ts  nodeComments.spec.ts  pm-openrpc.json  removingNodes.spec.ts  rightPanel.spec.ts  selectingNodes.spec.ts  setup.ts  tableVisualisation.spec.ts  typesOnNodeHover.spec.ts  undoRedo.spec.ts  widgets.spec.ts
app/gui/project-manager-shim-middleware/: index.ts
app/gui/scripts/: envReplacer.mjs  generateIconMetadata.mjs
app/gui/scripts/ci/: dedent.js  set-message.js
app/gui/src/: App.vue  ReactRoot.tsx  config.ts  entrypoint.ts
app/gui/src/dashboard/: App.tsx  index.tsx  styles.css  tailwind.css
app/gui/src/dashboard/hooks/: useRaf.ts  (+31 more)
app/gui/src/project-view/: App.vue  ProjectView.vue  ProjectViewTab.vue  bindings.ts  config.json  test-entrypoint.ts
(+1843 files in other folders)
